force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Management__c/ArdiraSurvey__Ardira_Record_Lifecycle_Management__c.object-meta.xml
<CustomObject>
    <description>Record lifecycle maps object allows to store a record lifecycle map to automate taking actions during a record&apos;s life cycle.</description>
    <label>Ardira Record Lifecycle Map</label>
    <nameField>
        <label>RLM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ardira Record Lifecycle Maps</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>