force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Management__c/fields/ArdiraSurvey__Active__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An inactive record lifecycle maps (RLM) will be ignored and no actions will be taken for records that falls into this RLM entry criteria.</description>
    <inlineHelpText>An inactive record lifecycle maps (RLM) will be ignored and no actions will be taken for records that falls into this RLM entry criteria.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>