force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Management__c/fields/ArdiraSurvey__Description__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Description__c</fullName>
    <description>Description for record lifecycle map.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>