force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Management__c/fields/ArdiraSurvey__Lifecycle_Trigger_Object__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Lifecycle_Trigger_Object__c</fullName>
    <description>An object API name whose records goes through actions of this stage.</description>
    <inlineHelpText>The primary entity whose lifecycle changes trigger the RLM actions.</inlineHelpText>
    <label>Lifecycle Trigger Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>