force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Management__c/fields/ArdiraSurvey__Who_Can_Execute_This_RLM__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Who_Can_Execute_This_RLM__c</fullName>
    <description>If &quot;Any user&quot; is selected, the RLM will execute without sharing in system mode.
If &quot;Only authorized users&quot; (i.e. user has “Read” permission on the object) is selected, the RLM will execute in user mode.</description>
    <inlineHelpText>Select who can execute this RLM: either only authorized users who have access to this record or any user.</inlineHelpText>
    <label>Who Can Execute This RLM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any User</fullName>
                <default>true</default>
                <label>Any User</label>
            </value>
            <value>
                <fullName>Only Authorized Users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>